# DA_Rust

./: .gitignore  Create Projects Table.sql
2024-07-18 Beryllium/: Cargo.toml
2024-07-18 Beryllium/crash_reporter_a/: Cargo.toml
2024-07-18 Beryllium/crash_reporter_b/: Cargo.toml
2024-07-18 Beryllium/sqlserver_b/: Cargo.toml
2024-07-18 Beryllium/tiberius_sqlserver/: Cargo.toml
2024-07-18 Beryllium/tiberius_sqlserver/src/: lib.rs  sql_client.rs
2024_08_02_Beryllium/: Cargo.toml  request.txt
2024_08_02_Beryllium/a_response/: Cargo.toml
2024_08_02_Beryllium/a_response/src/: config.rs  database.rs  lib.rs  models.rs  query.rs
2024_08_02_Beryllium/a_response/tests/: test.rs
2024_08_02_Beryllium/b_response/: Cargo.toml
2024_08_02_Beryllium/b_response/src/: config.rs  database.rs  lib.rs  models.rs  query.rs  query_build.rs
2024_08_02_Beryllium/b_response/tests/: database_test.rs
2024_08_02_Beryllium_02/: Cargo.toml  projects.csv  task_times.csv  tasks.csv
2024_08_02_Beryllium_02/a_response/: Cargo.toml
2024_08_02_Beryllium_03/: Cargo.toml
2024_08_02_Beryllium_03/a_response/: Cargo.toml
2024_08_02_Beryllium_03/a_response/src/: lib.rs  test.rs
2024_08_02_Beryllium_03/b_response/: Cargo.toml
Archive/Prompt ID 445/: Cargo.toml
Archive/a_client/: Cargo.toml
Archive/a_csv_read/: Cargo.toml
Archive/a_server/: Cargo.toml
Archive/rust_modelb/: Cargo.toml
Archive/rust_mysql/: Cargo.toml
Archive/search_project_b/: Cargo.toml
Archive/sqlx_demo/: Cargo.toml  CreateProjectsTable.sql
Archive/test_data/: trade_executions.csv  trades.csv  trades_config.json
Prompt ID 445/: Cargo.toml
Prompt_ID_122/: Cargo.toml
Prompt_ID_423/: Cargo.toml
b_client/: Cargo.toml
b_csv_read/: Cargo.toml
b_server/: Cargo.toml
mysql_test/: Cargo.toml  csv_data_loader.rs  models.rs
projects_a/: .env  .env.test  Cargo.toml  config.toml
projects_a/src/: config.rs  main.rs  model.rs  project.rs  project_task.rs  task_timing.rs
projects_a/src/models/: project.rs  task.rs
projects_a/src/tests/: integration.rs
projects_a/src/traits/: model_trait.rs
projects_a/tests/: common.rs  integration.rs  project_task_tests.rs  project_tests.rs  utils.rs
projects_b/: .env  .env.test  Cargo.toml
projects_b/src/: main.rs
projects_b/src/models/: project.rs  task.rs  timing.rs
projects_b/src/traits/: model_trait.rs
projects_b/tests/: common.rs  integration.rs  project_task_test.rs  project_task_tests.rs  project_tests.rs  test_helpers.rs  utils.rs
rust_modela/: Cargo.toml
search_project_a/: Cargo.toml
test_data/: 2022-09-17-AccountStatement.csv  203-424.csv  pgsql_project_tasks.csv  pgsql_projects.csv  pgsql_task_timings.csv  test_statement.csv  trades_confg.json  trades_config.json
trades_a/: Cargo.toml  options_details.csv  trades.csv
trades_b/: Cargo.toml
(+63 files in other folders)
