[package]
name = "projects_a"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
sqlx = { version = "0.6", features = [ "postgres" ] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
tokio = { version = "1.23.0", features = ["full"] }
csv = "1.1"
async-std = "1.11"
chrono = "0.4.19"
async-trait = "0.1.58"
