[package]
name = "projects_b"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6.3", features = [ "postgres", "runtime-tokio-native-tls" ] }
uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4"] }
tokio = { version = "1.21.2", features = ["full"] }
csv = "1.1.6"
async-std = "1.12.0"
chrono = "0.4.19"
async-trait = "0.1.54"
dotenv = "0.15.0"