[package]
name = "a_response"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite = { version = "0.36.0", features = ["bundled"] }
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2" }
tokio-util = { version = "0.7.11", features = ["codec"] }
chrono = "0.4.38"
futures = "0.3.30"
