[package]
name = "b_response"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
uuid = "1.10.0"
tokio = { version = "1.39.2" , features = ["full"]}
async-std = "1.12.0"
