[package]
name = "a_response"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
csv = "1.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.5.0"
tokio = { version = "1.39.2" , features = ["full"]}

[lib]
name = "a_response"
crate-type = ["rlib"]
